Add system level; create mecha combat sim

--- a/dma/quantumsystem.ipynb
+++ b/dma/quantumsystem.ipynb
@@ -10,6 +10,7 @@
     "from random import randint\n",
     "from string import Template\n",
     "import json\n",
+    "from dataclasses import dataclass\n",
     "\n",
     "from cog.torque import Graph\n",
     "import pygraphviz as pgv\n",
@@ -30,17 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c8e8767c-48a0-4210-806b-dfefeea5878e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MetaSystem:\n",
-    "    graph = Graph(\"DMA\")\n",
+    "class QuantumSystem:\n",
+    "    quantum_system_name = \"DMA\"\n",
+    "    graph = None\n",
     "    t = 0\n",
     "    \n",
     "    @classmethod\n",
-    "    def system(cls, name):\n",
+    "    def get_system(cls, name):\n",
+    "        for system in cls.MetaSystem.all_metasystems():\n",
+    "            if system.__name__ == name:\n",
+    "                return system\n",
+    "        \n",
     "        for system in cls.HyperSystem.all_hypersystems():\n",
     "            if system.__name__ == name:\n",
     "                return system\n",
@@ -51,8 +57,13 @@
     "\n",
     "        raise Exception(f\"Unknown system: {name}\")\n",
     "    \n",
+    "    @dataclass\n",
+    "    class Entity:\n",
+    "        \"\"\" An Entity is an anchor onto which Systems and HyperSystems attach \"\"\"\n",
+    "        entity_id: str\n",
+    "    \n",
     "    class System:\n",
-    "        edge_name = \"node\"\n",
+    "        \"\"\" Systems describe relationships between nouns \"\"\"\n",
     "        \n",
     "        @classmethod\n",
     "        def all_systems(cls):\n",
@@ -62,30 +73,36 @@
     "        \n",
     "        @classmethod\n",
     "        def resolver(cls, entity_name, relationships):\n",
-    "            if self.edge_name in relationships:\n",
-    "                MetaSystem.put(entity_name, self.edge_name, relationships[self.edge_name])\n",
-    "                return self.edge_name\n",
+    "            if cls.__name__ in relationships:\n",
+    "                QuantumSystem.put(entity_name, cls.__name__, relationships[cls.__name__])\n",
+    "                return cls.__name__\n",
     "        \n",
     "        @classmethod\n",
     "        def relationships(cls):\n",
-    "            return MetaSystem.v().tag(cls.edge_name).inc(cls.edge_name).all()['result']\n",
+    "            return QuantumSystem.v().tag(cls.__name__).inc(cls.__name__).all()['result']\n",
     "        \n",
     "        @classmethod\n",
     "        def relationships_by_id(cls):\n",
-    "            return {rel['id']: rel for rel in MetaSystem.v().tag(cls.edge_name).inc(cls.edge_name).all()['result']}\n",
+    "            return {rel['id']: rel for rel in cls.relationships()}\n",
     "        \n",
     "        @classmethod\n",
     "        def validate(cls):\n",
     "            pass\n",
     "        \n",
     "        @classmethod\n",
-    "        def get_relationship(cls, node_id):\n",
+    "        def get_relationship(cls, entity_id):\n",
     "            try:\n",
-    "                return MetaSystem.v(node_id).out(cls.edge_name).all()['result'][0]['id']\n",
+    "                return QuantumSystem.v(entity_id).out(cls.__name__).all()['result'][0]['id']\n",
     "            except IndexError:\n",
-    "                raise Exception(f\"{cls.__name__} relationship not found on {node_id}\")\n",
+    "                raise Exception(f\"{cls.__name__} relationship not found on {entity_id}\")\n",
+    "        \n",
+    "        @classmethod\n",
+    "        def build_system(cls, anchor, terminant):\n",
+    "            QuantumSystem.add_entity(anchor, **{cls.__name__: terminant})\n",
+    "            return anchor\n",
     "        \n",
     "    class HyperSystem:\n",
+    "        \"\"\" HyperSystems describe relationships between relationships of nouns \"\"\"\n",
     "        systems = []\n",
     "        \n",
     "        @classmethod\n",
@@ -101,32 +118,71 @@
     "        @classmethod\n",
     "        def validate(cls):\n",
     "            [system.validate() for system in cls.systems]\n",
+    "        \n",
+    "        @classmethod\n",
+    "        def build_system(cls, anchor, terminants):\n",
+    "            for system, terminant in zip(cls.systems, terminants):\n",
+    "                system.build_system(anchor, terminant)\n",
+    "            return anchor\n",
     "    \n",
+    "    class MetaSystem:\n",
+    "        \"\"\" MetaSystems encapsulate HyperSystems and Systems \"\"\"\n",
+    "        systems = []\n",
+    "        \n",
+    "        @classmethod\n",
+    "        def all_metasystems(cls):\n",
+    "            for subclass in cls.__subclasses__():\n",
+    "                yield from subclass.all_metaclasses()\n",
+    "                yield subclass\n",
+    "        \n",
+    "        @classmethod\n",
+    "        def build_system(cls, anchor, terminants):\n",
+    "            meta_anchor = f\"{anchor}-{cls.__name__}\"\n",
+    "            for system, terminant in zip(cls.systems, terminants):\n",
+    "                system.build_system(meta_anchor, terminant)\n",
+    "            QuantumSystem.add_entity(anchor, **{cls.__name__: meta_anchor})\n",
+    "            return anchor\n",
+    "\n",
     "    @classmethod\n",
     "    def reset(cls):\n",
     "        !rm -rf /tmp/cog_home\n",
-    "        cls.graph = Graph(\"DMA\")\n",
+    "        cls.graph = Graph(cls.quantum_system_name)\n",
     "    \n",
     "    @classmethod\n",
     "    def whole_graph(cls):\n",
     "        return cls.graph.v().tag(\"from\").out().tag(\"to\")\n",
     "    \n",
     "    @classmethod\n",
-    "    def add_entity(cls, entity_name, **relationships):\n",
+    "    def add_entity(cls, entity_id, **relationships):\n",
     "        for rel_name, rel_value in relationships.items():\n",
-    "            cls.graph.put(entity_name, rel_name, rel_value)\n",
+    "            cls.graph.put(entity_id, rel_name, rel_value)\n",
     "    \n",
     "    @classmethod\n",
-    "    def entity_exists(cls, entity_name):\n",
-    "        return (cls.v(entity_name).inc().count() + cls.v(entity_name).out().count()) > 0\n",
+    "    def entity_exists(cls, entity_id):\n",
+    "        return (cls.v(entity_id).inc().count() + cls.v(entity_id).out().count()) > 0\n",
     "    \n",
     "    @classmethod\n",
     "    def v(cls, *args, **kwargs):\n",
     "        return cls.graph.v(*args, **kwargs)\n",
     "    \n",
     "    @classmethod\n",
-    "    def put(cls, entity_name, edge_name, system_value):\n",
-    "        cls.graph.put(entity_name, edge_name, system_value)\n",
+    "    def put(cls, entity_id, edge_name, system_value):\n",
+    "        if type(edge_name) is type:\n",
+    "            edge_name = edge_name.__name__\n",
+    "        cls.graph.put(entity_id, edge_name, system_value)\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def drop(cls, entity_id, edge_name, system_value):\n",
+    "        if type(edge_name) is type:\n",
+    "            edge_name = edge_name.__name__\n",
+    "        cls.graph.drop(entity_id, edge_name, system_value)    \n",
+    "    \n",
+    "    @classmethod\n",
+    "    def replace(cls, entity_id, edge_name, old_system_value, new_system_value):\n",
+    "        if type(edge_name) is type:\n",
+    "            edge_name = edge_name.__name__\n",
+    "        cls.graph.drop(entity_id, edge_name, old_system_value)    \n",
+    "        cls.graph.put(entity_id, edge_name, new_system_value) \n",
     "    \n",
     "    @classmethod\n",
     "    def validate(cls):\n",
@@ -140,6 +196,8 @@
     "    \n",
     "    @classmethod\n",
     "    def trace_edges(cls, edge_name, g=None):\n",
+    "        if type(edge_name) is type:\n",
+    "            edge_name = edge_name.__name__\n",
     "        g = cls.v(\"output\") if g is None else g\n",
     "        edges = g.inc(edge_name).all()['result']\n",
     "        return [f['id'] for f in edges] + (trace_edges(g) if len(edges) > 0 else [])\n",
@@ -150,6 +208,8 @@
     "    \n",
     "    @classmethod\n",
     "    def build_traversal_at_depth(cls, edge_name, depth, start=None, reverse=True):\n",
+    "        if type(edge_name) is type:\n",
+    "            edge_name = edge_name.__name__\n",
     "        g = cls.v() if start is None else cls.v(start)\n",
     "        for i in range(depth):\n",
     "            g = cls.path_dir(g.tag(f\"depth{i}\"), reverse)(edge_name).tag(\"end\")\n",
@@ -157,12 +217,14 @@
     "    \n",
     "    @classmethod\n",
     "    def get_paths(cls, edge_name, end=None, start=None, reverse=True):\n",
+    "        if type(edge_name) is type:\n",
+    "            edge_name = edge_name.__name__\n",
     "        g = cls.v(start) if start is not None else cls.v()\n",
     "        depth = 0\n",
     "        all_paths = []\n",
     "        while (g := cls.build_traversal_at_depth(edge_name, depth, start=start, reverse=reverse)).count() > 0:\n",
     "            for path in g.all()['result']:\n",
-    "                if pathDir(cls.v(path['id']), reverse)(edge_name).count() == 0:\n",
+    "                if cls.path_dir(cls.v(path['id']), reverse)(edge_name).count() == 0:\n",
     "                    all_paths.append(path)\n",
     "            depth += 1\n",
     "        return all_paths\n",
@@ -203,51 +265,9 @@
     "                        len=2)\n",
     "        \n",
     "        vg.layout(prog='neato')\n",
-    "        vg.draw('DMA.png')\n",
-    "        return Image('DMA.png')\n",
-    "ms = MetaSystem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f54ccd87-9d6e-4b21-ba37-041ff299c6c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class AeonicMetaSystem(MetaSystem):\n",
-    "    aeon = 0\n",
-    "    aeon_edge_name = \"aeon\"\n",
-    "    \n",
-    "    @classmethod\n",
-    "    def put(cls, entity_name, edge_name, system_value):\n",
-    "        cls.graph.put(entity_name, edge_name, system_value)\n",
-    "        cls.graph.put(system_value, cls.aeon_edge_name, cls.aeon)\n",
-    "    \n",
-    "    @classmethod\n",
-    "    def observe(cls):\n",
-    "        aeon += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "a05ab2f5-4ae2-41df-a2bb-ecf4b160e119",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0x6'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hex(5 + 1)"
+    "        vg.draw(f'{cls.quantum_system_name}.png')\n",
+    "        return Image(f'{cls.quantum_system_name}.png')\n",
+    "qs = QuantumSystem"
    ]
   },
   {
