I don't even know

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -397,10 +397,10 @@
     "        self.lastCapture = {cam.camNum: cam.capture() for cam in cameras.values()}\n",
     "        return self.lastCapture\n",
     "        \n",
-    "    def defineObject(self, name: str, captures: dict, movable: bool, targetable: bool):\n",
+    "    def defineObject(self, name: str, captures: dict):\n",
     "        camBoxes = {int(camNum): capture[1] for camNum, capture in captures.items()}\n",
     "        realCoords = self.camBoxesToRealCoordinates(camBoxes)\n",
-    "        self.captureObjects[name] = CaptureObject(name, realCoords, camBoxes, movable, targetable)\n",
+    "        self.captureObjects[name] = CaptureObject(name, realCoords, camBoxes)\n",
     "\n",
     "    def camBoxesToRealCoordinates(self, camBoxes):\n",
     "        xs, ys = zip(*[\n",
@@ -414,7 +414,7 @@
     "        pt1 = self.captureObjects[obj1].realCoords\n",
     "        return distanceFormula(pt0, pt1) * CalibrationBox.millimetersPerPixel\n",
     "\n",
-    "    def updateObject(self, name: str, camBoxes: {int: list[int]}, transition: {int: list[np.ndarray]}):\n",
+    "    def updateObject(self, name: str, camBoxes: {int: list[int]}):\n",
     "        self.captureObjects[name].update(camBoxes)\n",
     "        self.captureObjects[name].realCoords = self.camBoxesToRealCoordinates(camBoxes)\n",
     "\n",
