Omg it works mostly

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -419,7 +419,7 @@
     "        self.captureObjects[name].realCoords = self.camBoxesToRealCoordinates(camBoxes)\n",
     "\n",
     "    def identifySelectedObject(self, captures):\n",
-    "        camCaptures = {cN: [d for d in cap[1]] for cN, cap in captures.items()}\n",
+    "        camCaptures = {cN: cap[1] for cN, cap in captures.items()}\n",
     "        for capObj in self.captureObjects.values():\n",
     "            originMatches = {cN: [] for cN in cameras}\n",
     "            transition = {cN: [None, None] for cN in cameras}\n",
