Object segmentation & tracking

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -146,9 +146,12 @@
    "source": [
     "@dataclass\n",
     "class CameraChange:\n",
+    "    camNum: int\n",
     "    changePoints: np.array\n",
     "    before: np.array\n",
     "    after: np.array\n",
+    "    changeType: str = \"unclassified\"\n",
+    "    lastChange: object = None\n",
     "    \n",
     "    def __post_init__(self):\n",
     "        xS = [pt[0] for pt in self.changePoints]\n",
@@ -165,6 +168,15 @@
     "    @property\n",
     "    def clipBox(self):\n",
     "        return [int(i) for i in (*self.corner, self.width, self.height)]\n",
+    "    \n",
+    "    def classify(self, changeType: str, lastChange: object=None):\n",
+    "        assert changeType in [\"add\", \"move\", \"delete\", \"unclassified\"]\n",
+    "        if changeType == 'move':\n",
+    "            if lastChange is None:\n",
+    "                print(f\"How?\")\n",
+    "                from IPython import embed; embed()\n",
+    "        self.lastChange = lastChange\n",
+    "        self.changeType = changeType\n",
     "\n",
     "    def changeOverlap(self, change):\n",
     "        allPoints = [pt for pt in self.changePoints] + [pt for pt in change.changePoints]\n",
@@ -179,14 +191,18 @@
     "        return cv2.bitwise_and(changeIm, otherIm).any()\n",
     "    \n",
     "    def __eq__(self, other):\n",
-    "        return \\\n",
-    "            (other.center[0] - 10 < self.center[0] < other.center[0] + 10) and \\\n",
-    "            (other.center[1] - 10 < self.center[1] < other.center[1] + 10) and \\\n",
-    "            (other.width - 10 < self.width < other.width + 10) and \\\n",
-    "            (other.height - 10 < self.height < other.height + 10) and self.changeOverlap(other)\n",
+    "        if self.changeType == 'delete':\n",
+    "            return other is None or other.changeType == 'delete'\n",
+    "        else:\n",
+    "            return \\\n",
+    "            (other is not None) and \\\n",
+    "            (other.center[0] - 20 < self.center[0] < other.center[0] + 20) and \\\n",
+    "            (other.center[1] - 20 < self.center[1] < other.center[1] + 20) and \\\n",
+    "            (other.width - 20 < self.width < other.width + 20) and \\\n",
+    "            (other.height - 20 < self.height < other.height + 20) and self.changeOverlap(other)\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return f\"{self.center} by {self.width},{self.height}\"\n",
+    "        return f\"({self.changeType}) {self.center} by {self.width},{self.height}\"\n",
     "    \n",
     "    def beforeAfter(self):\n",
     "        return hStackImages([self.before, self.after])"
@@ -286,7 +302,7 @@
     "                filteredContours.append(contour)\n",
     "        if len(filteredContours) > 0:\n",
     "            allPoints = np.array([pt for c in filteredContours for d in c for pt in d], dtype=\"float32\") \n",
-    "            return CameraChange(allPoints, oldIm, newIm)\n",
+    "            return CameraChange(self.camNum, allPoints, oldIm, newIm)\n",
     "        else:\n",
     "            return None\n",
     "    \n",
@@ -312,26 +328,29 @@
     "                overlaps.append(eC)\n",
     "        return overlaps\n",
     "    \n",
-    "    def commitChange(self, change: CameraChange):\n",
+    "    def commitAndClassifyChange(self, change: CameraChange):\n",
     "        overlaps = self.changeOverlaps(change)\n",
     "        if len(overlaps) == 0:  # Addition\n",
+    "            change.classify(\"add\")\n",
     "            print(f\"Adding {change}\")\n",
     "            self.changes.insert(0, change)\n",
-    "            return \"add\"\n",
+    "            return change\n",
     "        elif len(overlaps) == 1:  # Move or Deletion\n",
     "            cPD = self.changePatchDelta(overlaps[0])\n",
     "            if cPD is not None:  # Move\n",
-    "                patchedOverlaps = self.changeOverlaps(cPD)\n",
+    "                patchedOverlaps = [o for o in self.changeOverlaps(cPD) if o != overlaps[0]]\n",
     "                if len(patchedOverlaps) != 0:\n",
-    "                    raise Exception(f\"Unable to classify change: {change} interacting with {overlaps[0]}\")\n",
-    "                print(f\"Moving {overlaps[0]} to {change}\")\n",
+    "                    raise Exception(f\"Unable to classify change: {change} interacting with {overlaps[0]} (patch has overlaps: {patchedOverlaps}\")\n",
     "                self.changes.remove(overlaps[0])\n",
+    "                cPD.classify(\"move\", overlaps[0])\n",
+    "                print(f\"Moving {overlaps[0]} to {cPD}\")\n",
     "                self.changes.insert(0, cPD)\n",
-    "                return \"move\"\n",
+    "                return cPD\n",
     "            else:  # Deletion\n",
-    "                print(f\"Deleting {overlaps[0]}\")\n",
     "                self.changes.remove(overlaps[0])\n",
-    "                return \"delete\"\n",
+    "                change.classify(\"delete\", overlaps[0])\n",
+    "                print(f\"Deleting {overlaps[0]}\")\n",
+    "                return change\n",
     "        else:\n",
     "            raise Exception(f\"Unable to classify change: {change}\")\n",
     "    \n",
