Controller and minimap updates

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -458,56 +458,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "335890c6-64f8-4248-aa29-89d85843ada6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "@dataclass\n",
-    "class Capture:\n",
-    "    cid: str\n",
-    "    changeSet: dict[int, CameraChange]\n",
-    "    \n",
-    "    def __eq__(self, other):\n",
-    "        if other is None:\n",
-    "            return False\n",
-    "        if len(self.changeSet) != len(other.changeSet):\n",
-    "            return False\n",
-    "\n",
-    "        for camNum, change in self.changeSet.items():\n",
-    "            if camNum not in other.changeSet or change != other.changeSet[camNum]:\n",
-    "                return False\n",
-    "        return True\n",
-    "    \n",
-    "    def changeOverlap(self, camNum: int, change: CameraChange):\n",
-    "        if camNum not in self.changeSet:\n",
-    "            return False\n",
-    "        \n",
-    "        cam = cameras[camNum]\n",
-    "        camChange = self.changeSet[camNum]\n",
-    "        zeros = np.zeros(cam.mostRecentFrame.shape[:2], np.uint8)\n",
-    "        changeIm = cv2.drawContours(zeros.copy(), camChange.changeContours, -1, 255, -1)\n",
-    "        otherIm = cv2.drawContours(zeros.copy(), change.changeContours, -1, 255, -1)\n",
-    "        return cv2.bitwise_and(changeIm, otherIm).any()\n",
-    "    \n",
-    "    def visual(self):\n",
-    "        return hStackImages([cs.after for cs in self.changeSet.values()])\n",
-    "    \n",
-    "    def realCoordinates(self):\n",
-    "        return [cameras[camNum].convertCameraToRealSpace(change.center)\n",
-    "                for camNum, change in self.changeSet.items()]\n",
-    "    \n",
-    "    @property\n",
-    "    def realCenter(self):\n",
-    "        centers = self.realCoordinates()\n",
-    "        midIndex = int(len(centers) / 2)\n",
-    "        return [sorted(coord)[midIndex] for coord in list(zip(*centers))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "47c5e5b7-70ee-4b05-a997-8e2a260bde01",
    "metadata": {},
    "outputs": [],
@@ -527,7 +477,7 @@
     "            sum([self.changeSet[camNum] == other.changeSet[camNum] for camNum in self.changeSet.keys()]) == len(self.changeSet)\n",
     "\n",
     "    def visual(self):\n",
-    "        images = [change.after for change in self.changeSet.values()]\n",
+    "        images = [change.after for change in self.changeSet.values() if change.changeType not in [\"delete\", None]]\n",
     "        maxHeight =  max([im.shape[0] for im in images])\n",
     "        filler = np.zeros((maxHeight, 50, 3), np.uint8)\n",
     "        if not self.empty:\n",
@@ -542,6 +492,11 @@
     "    \n",
     "@dataclass\n",
     "class TrackedObject(ChangeSet):\n",
+    "    def __post_init__(self):\n",
+    "        self.icon = sorted([cs.after for cs in self.changeSet.values()\n",
+    "                            if cs is not None and cs.changeType != \"delete\"],\n",
+    "                           key=lambda x: x.size if x is not None else 0)[0]\n",
+    "\n",
     "    def __repr__(self):\n",
     "        changeSet = {camNum: cS for camNum, cS in self.changeSet.items() if cS is not None and cS.changeType not in [None, 'delete']}\n",
     "        return f\"TrackedObject({changeSet})\"\n",
@@ -559,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2b1b8be9-0ac8-41ef-a473-8735f101e2b0",
    "metadata": {
     "tags": []
@@ -640,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 113,
    "id": "a11c34d1-2f66-41d6-a5e1-54fdf47e3204",
    "metadata": {},
    "outputs": [],
@@ -678,34 +633,42 @@
     "            avgY = sum(yS) / len(yS)\n",
     "        return avgX, avgY\n",
     "    \n",
+    "    def trackedObjectToRealCenter(self, trackedObject: TrackedObject):\n",
+    "        return self.changeSetToRealCenter(trackedObject.changeSet)\n",
+    "    \n",
     "    def trackedObjectLastDistance(self, trackedObject: TrackedObject):\n",
     "        previousChangeSet = trackedObject.previousVersion().changeSet\n",
     "        currentLocation = self.changeSetToRealCenter(trackedObject.changeSet)\n",
     "        previousLocation = self.changeSetToRealCenter(previousChangeSet)\n",
     "        return distanceFormula(previousLocation, currentLocation)\n",
     "\n",
-    "    def buildMiniMap(self):\n",
-    "        objs = list(self.captures.values())\n",
-    "        image = np.zeros([1000, 1000], dtype=\"uint8\")\n",
-    "        if not objs:\n",
-    "            return image\n",
+    "    def cameraRealSpaceOverlap(self):\n",
+    "        im = None\n",
+    "        warps = []\n",
+    "        for camNum, camConverters in self.converters.items():\n",
+    "            cam = cameras[camNum]\n",
+    "            for converter in camConverters:\n",
+    "                warp = cv2.warpPerspective(cam.cropToActiveZone(cam.mostRecentFrame), converter.M, (1200, 1200))\n",
+    "                warp = cv2.cvtColor(warp, cv2.COLOR_BGR2GRAY)\n",
+    "                warps.append(warp)\n",
+    "        avg_im = sum([warp * (1 / len(warps)) for warp in warps]).astype(\"uint8\")\n",
+    "        avg_im = cv2.threshold(avg_im, 42, 255, cv2.THRESH_BINARY)[1]\n",
+    "        realSpaceContour = cv2.findContours(avg_im, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[0]\n",
+    "        return realSpaceContour\n",
     "\n",
-    "        xS = [o.realCenter[0] for o in objs]\n",
-    "        yS = [o.realCenter[1] for o in objs]\n",
-    "        minX = int(max(min(xS) - 10, 0))\n",
-    "        maxX = int(min(max(xS) + 10, 1000))\n",
-    "        minY = int(max(min(yS) - 10, 0))\n",
-    "        maxY = int(min(max(yS) + 10, 1000))\n",
-    "        dim = [maxX - minX, maxY - minY]\n",
-    "\n",
-    "        for obj in objs:\n",
-    "            cv2.circle(image, np.array(obj.realCenter, dtype=\"uint32\"), radius=1, color=255, thickness=-1)\n",
-    "        return image[minY:maxY, minX:maxX]"
+    "    def unwarpedOverlaidCameras(self):\n",
+    "        im = None\n",
+    "        for camNum, camConverters in self.converters.items():\n",
+    "            cam = cameras[camNum]\n",
+    "            for converter in camConverters:\n",
+    "                warp = cv2.warpPerspective(cam.cropToActiveZone(cam.mostRecentFrame), converter.M, (1200, 1200))\n",
+    "                im = warp if im is None else cv2.addWeighted(im, 0.6, warp, 0.3, 0)\n",
+    "        return im"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 114,
    "id": "fac2d2c7-7d3c-4e4d-8859-70c521f7deae",
    "metadata": {},
    "outputs": [],
@@ -731,13 +694,6 @@
     "    \n",
     "    def scanCamsForCalibrationBoxes(self):\n",
     "        return {cam.camNum: (qrs := decode(cam.mostRecentFrame), len(qrs)) for cam in cameras.values()}\n",
-    "\n",
-    "    def unwarpedOverlaidCameras(self):\n",
-    "        im = None\n",
-    "        for camNum, cam in cameras.items():\n",
-    "            warp = cv2.warpPerspective(cam.cropToActiveZone(cam.mostRecentFrame), cam.M, (1000, 1000))\n",
-    "            im = warp if im is None else cv2.addWeighted(im, 0.6, warp, 0.3, 0)\n",
-    "        return im\n",
     "    \n",
     "    def saveConfiguration(self):\n",
     "        state = {\n",
@@ -784,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 152,
    "id": "69c04d27-8608-4b7b-b4c4-b5afcd692526",
    "metadata": {
     "tags": []
@@ -811,6 +767,7 @@
     "        self.memory = []\n",
     "        self.lastMemory = None\n",
     "        self.calibrationPts = []\n",
+    "        self.realSpaceContour = None\n",
     "        \n",
     "    @property\n",
     "    def calibrated(self):\n",
@@ -839,8 +796,10 @@
     "        for camNum, change in objDef.changeSet.items():\n",
     "            cameras[camNum].commitChange(change)\n",
     "        \n",
-    "        self.transitions.append({camNum: {\"ref\": cam.referenceFrame, \"fin\": cam.mostRecentFrame}\n",
-    "                                 for camNum, cam in cameras.items()})\n",
+    "        self.transitions.append({\n",
+    "            \"obj\": objDef,\n",
+    "            \"cameraChanges\":  {camNum: {\"ref\": cam.referenceFrame, \"fin\": cam.mostRecentFrame}\n",
+    "                               for camNum, cam in cameras.items()}})\n",
     "        \n",
     "    @staticmethod\n",
     "    def classifyChanges(changes):\n",
@@ -874,6 +833,22 @@
     "            print(\"Building RealSpaceConverter\")\n",
     "            self.cc.rsc = RealSpaceConverter([cNCoordPair for cPtGrp in self.calibrationPts for cNCoordPair in list(cPtGrp.items())])\n",
     "            self.mode = \"passive\"\n",
+    "\n",
+    "    def buildMiniMap(self):\n",
+    "        if self.realSpaceContour is None:\n",
+    "            self.realSpaceContour = cc.rsc.cameraRealSpaceOverlap()\n",
+    "            self.realSpaceBoundingBox = cv2.boundingRect(self.realSpaceContour[-1])\n",
+    "        x, y, w, h = self.realSpaceBoundingBox\n",
+    "        objs = self.memory\n",
+    "        image = np.zeros([1200, 1200], dtype=\"uint8\")\n",
+    "        if not objs:\n",
+    "            return image[y:y+h, x:x+w]\n",
+    "\n",
+    "        minX, maxX, minY, maxY = 1200, 0, 1200, 0\n",
+    "        for obj in objs:\n",
+    "            center = self.cc.rsc.trackedObjectToRealCenter(obj)\n",
+    "            cv2.circle(image, np.array(center, dtype=\"uint32\"), radius=10, color=255, thickness=-1)\n",
+    "        return image[y:y+h, x:x+w]\n",
     "    \n",
     "    def cycle(self):\n",
     "        try:\n",
@@ -899,7 +874,7 @@
     "                            else:\n",
     "                                raise Exception(\"Unrecognized State\")\n",
     "                            self.cc.setReference()\n",
-    "                        except AssertError as as:\n",
+    "                        except AssertionError as ae:\n",
     "                            print(\"Failed Calibration: {ae}\")\n",
     "                            nextState = \"unstable\"\n",
     "                            classification = None\n",
@@ -913,7 +888,7 @@
     "            print(format_exc())\n",
     "            raise\n",
     "    \n",
-    "    def startTracking(self):\n",
+    "    def trackingMode(self):\n",
     "        self.mode = \"track\"\n",
     "    \n",
     "    def passiveMode(self):\n",
@@ -946,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 153,
    "id": "2328f428-b048-4c6a-89c6-6dc1ce0282c3",
    "metadata": {
     "tags": []
@@ -984,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 154,
    "id": "c49c223d-d948-4052-b1f5-f0c61a495072",
    "metadata": {
     "tags": []
@@ -994,9 +969,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Cycle    76 -- CapMac -- passive idle\n",
-      "Starting Cycle    77 -- CapMac -- passive idle\n",
-      "Starting Cycle    78 -- CapMac -- passive idle\n"
+      "Starting Cycle     0 -- CapMac -- passive idle\n",
+      "Starting Cycle     1 -- CapMac -- passive idle\n",
+      "Starting Cycle     2 -- CapMac -- passive idle\n"
      ]
     }
    ],
@@ -1004,18 +979,18 @@
     "if __name__ == \"__main__\":\n",
     "    for i in range(3):\n",
     "        cm.cycle()\n",
-    "        sleep(1)\n",
-    "    cm.cycleForCalibration()"
+    "        sleep(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "5dd30fbc-7791-43c5-a421-2ab89e8ab60b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if __name__ == \"__main__\":\n",
+    "if __name__ == \"__main__\" and False:\n",
+    "    cm.cycleForCalibration()\n",
     "    for camNum, cons in cc.rsc.converters.items():\n",
     "        if len(cons) == 1:\n",
     "            plt.imshow(cons[0].showUnwarpedImage())\n",
@@ -1026,33 +1001,6 @@
     "        plt.title(f\"{camNum} Unwarped\")\n",
     "        plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7cffb963-949b-400e-9a10-71665a54b2a7",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "if __name__ == \"__main__\":\n",
-    "    c = cm.cycleForChange()\n",
-    "    plt.imshow(c.visual())\n",
-    "    plt.show()\n",
-    "\n",
-    "    print(f\"Object {c} is located at {cc.rsc.changeSetToRealCenter(c.changeSet)}\")\n",
-    "    if not c.isNewObject:\n",
-    "        print(f\"Object {c} last traveled: {cc.rsc.trackedObjectLastDistance(c)} mm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02888da7-bc7b-4c5a-a2d2-4a18290b2605",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
